--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,7 @@ version = "0.1.0"
 authors = ["Tommaso Checchi <tommaso.checchi1@gmail.com>"]
 
 [dependencies]
+clap = "*"
+regex = "*"
+regex_macros = "*"
+uuid = "*"
